--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 		<meta name="Description" content="Simple parallax startpage"/>
 		<link rel="icon" type="image/x-icon" href="src/img/favicons/favicon.ico"/>
 		<link rel="preload" href="src/css/main.css" as="style"/>
+		<link rel="preload" href="src/css/cursor.css" as="style"/>
 		<link rel="stylesheet" href="src/css/main.css"/>
-		<script nonce="rand" src="src/js/main.js" defer></script>
+		<link rel="stylesheet" href="src/css/cursor.css"/>
+		<script src="src/js/main.js" defer></script>
+		<script src="src/js/cursor.js" defer></script>
         <link rel="stylesheet" href="src/css/fontawesome/css/all.min.css">
 	</head>
 	<body>
+		<div class="cursor">
+			<div class="cursor-icon">
+			</div>
+		</div>
 		<div class="bg">
 			<div id="list"></div>
 			<div id="icons"></div>
